tests/machine/x/cpp/map_literal_dynamic.mochi.error
line 16: ../../../tests/machine/x/cpp/map_literal_dynamic.mochi.cpp: In function ‘int main()’:
../../../tests/machine/x/cpp/map_literal_dynamic.mochi.cpp:16:10: error: no matching function for call to ‘print(std::unordered_map<std::__cxx11::basic_string<char>, int>::mapped_type&, std::unordered_map<std::__cxx11::basic_string<char>, int>::mapped_type&)’
   16 |     print(m["a"], m["b"]);
      |     ~~~~~^~~~~~~~~~~~~~~~
../../../tests/machine/x/cpp/map_literal_dynamic.mochi.cpp:8:27: note: candidate: ‘template<class T> void print(const T&)’
    8 | template<typename T> void print(const T& v){ std::cout << v; }
      |                           ^~~~~
../../../tests/machine/x/cpp/map_literal_dynamic.mochi.cpp:8:27: note:   template argument deduction/substitution failed:
../../../tests/machine/x/cpp/map_literal_dynamic.mochi.cpp:16:10: note:   candidate expects 1 argument, 2 provided
   16 |     print(m["a"], m["b"]);
      |     ~~~~~^~~~~~~~~~~~~~~~
../../../tests/machine/x/cpp/map_literal_dynamic.mochi.cpp:9:6: note: candidate: ‘void print(const std::vector<int>&)’
    9 | void print(const std::vector<int>& v){ for(size_t i=0;i<v.size();++i){ if(i) std::cout<<' '; std::cout<<v[i]; }}
      |      ^~~~~
../../../tests/machine/x/cpp/map_literal_dynamic.mochi.cpp:9:6: note:   candidate expects 1 argument, 2 provided
../../../tests/machine/x/cpp/map_literal_dynamic.mochi.cpp:10:6: note: candidate: ‘void print(bool)’
   10 | void print(bool b){ std::cout<<(b?"true":"false"); }
      |      ^~~~~
../../../tests/machine/x/cpp/map_literal_dynamic.mochi.cpp:10:6: note:   candidate expects 1 argument, 2 provided

 15 |     auto m = std::unordered_map<std::string,int>{{"a", x}, {"b", y}};
 16 |     print(m["a"], m["b"]);
 17 |     return 0;
